k8s/monitoring/mimir-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: mimir-monolithic-wireguard
  namespace: monitoring
  labels:
    app.kubernetes.io/name: mimir
    app.kubernetes.io/component: monolithic
spec:
  type: NodePort
  selector:
    app.kubernetes.io/component: monolithic
    app.kubernetes.io/name: mimir
  ports:
    - port: 8080
      targetPort: http-metrics
      nodePort: 30090
      protocol: TCP
      name: http-metrics
